--- a/vrs/templates/services.html
+++ b/vrs/templates/services.html
@@ -10,23 +10,64 @@ Services
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img style = "padding: 30px 0px 0px 0px; max-height = 700px; height: 700px;" src="https://i.ytimg.com/vi/mWxjRXR7nWI/maxresdefault.jpg" class="d-block w-100" alt="...">
-        </div>
-          <div class="carousel-item">
-            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://w0.peakpx.com/wallpaper/544/133/HD-wallpaper-tomb-raider-games-movie-action-video-game-video-games-guns-gun-lara-croft-pistols-hot-beauty-female-erica-ocampo-model-black-sexy-adventure-weapons-girl-plain-background-alison.jpg" class="d-block w-100" alt="...">
             <div class="bottom-left" style = "position: absolute;
-            top: 70%;
+            top: 80%;
             left: 50%;
             transform: translate(-50%, -50%);
             font-size:500%;
             color: white;
+            Font-family: 'Comic Sans MS';
+          ">WE THE MEN</div>
+        </div>
+          <div class="carousel-item">
+            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://w0.peakpx.com/wallpaper/544/133/HD-wallpaper-tomb-raider-games-movie-action-video-game-video-games-guns-gun-lara-croft-pistols-hot-beauty-female-erica-ocampo-model-black-sexy-adventure-weapons-girl-plain-background-alison.jpg" class="d-block w-100" alt="...">
+            <div class="bottom-left" style = "position: absolute;
+            top: 80%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size:500%;
+            color: white;
+            Font-family: 'Comic Sans MS';
           ">LARA CROFT</div>
         </div>
           <div class="carousel-item">
-            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://media1.popsugar-assets.com/files/thumbor/MeLoZj0qZccjAfZ5ZCo4mPq-obs=/fit-in/3900x2600/top/filters:format_auto():extract_cover():upscale()/2022/03/03/722/n/46902964/3cecfccbef36e2ba_MCDROON_EC036.jpg" class="d-block w-100" alt="...">          </div>
+            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://media1.popsugar-assets.com/files/thumbor/MeLoZj0qZccjAfZ5ZCo4mPq-obs=/fit-in/3900x2600/top/filters:format_auto():extract_cover():upscale()/2022/03/03/722/n/46902964/3cecfccbef36e2ba_MCDROON_EC036.jpg" class="d-block w-100" alt="...">          
+            <div class="bottom-left" style = "position: absolute;
+            top: 80%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size:400%;
+            color: white;
+            Font-family: 'Comic Sans MS';
+          ">WOMEN IN US</div>
+        </div>
+        <div class="carousel-item">
+            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://www.teahub.io/photos/full/82-823033_cat-cute-and-animal-image-hd-wallpapers-for.jpg" class="d-block w-100" alt="...">          
+            <div class="bottom-left" style = "position: absolute;
+            top: 80%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size:500%;
+            color: white;
+            Font-family: 'Comic Sans MS';
+          ">CHIPI CHIPI</div>
+        </div>
+        <div class="carousel-item">
+            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://www.pixel4k.com/wp-content/uploads/2019/01/captain-marvel-4k-poster_1547507717-768x410.jpg.webp" class="d-block w-100" alt="...">          
+            <div class="bottom-left" style = "position: absolute;
+            top: 80%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size:400%;
+            color: white;
+            Font-family: 'Comic Sans MS';
+          "></div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
