--- a/vrs/templates/index.html
+++ b/vrs/templates/index.html
@@ -106,22 +106,23 @@
 				<h3>Sign In</h3>
 			</div>
 			<div class="card-body">
-				<form>
+				<form  method="post" action="/">
+                    {% csrf_token %}
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="email">
+						<input type="text" class="form-control" name="email" placeholder="email">
 						
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" placeholder="password">
+						<input type="password" class="form-control" name="password" placeholder="password">
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn float-center login_btn" formaction="/services">Login</button>
+						<button type="submit" class="btn float-center login_btn">Login</button>
 					</div>
 				</form>
 			</div>
