--- a/vrs/templates/signup.html
+++ b/vrs/templates/signup.html
@@ -94,6 +94,7 @@
 			</div>
 			<div class="card-body">
 				<form method="post">
+                    {% csrf_token %}
                     <div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
