--- a/vrs/templates/base.html
+++ b/vrs/templates/base.html
@@ -34,7 +34,6 @@
                 <a class="dropdown-item" href="#">Comedy</a>
                 <a class="dropdown-item" href="#">Romance</a>
                 <a class="dropdown-item" href="#">Drama</a>
-
               </div>
             </li>
             <li class="nav-item">
@@ -43,8 +42,11 @@
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-success my-2 my-sm-0 mx-2" type="submit">Search</button>
           </form>
+          <div>
+            <a class="btn btn-success my-2 my-sm-0" type="submit" href ="/signout" >Log Out</a>
+          </div>
         </div>
       </nav>
     {% block body %}{% endblock body  %}
