--- a/vrs/templates/signup.html
+++ b/vrs/templates/signup.html
@@ -6,7 +6,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!------ Include the above in your HEAD tag ---------->
 <head>
-	<title>Login Page</title>
+	<title>Sign Up</title>
    
 	<!--Bootsrap 4 CDN-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -87,13 +87,16 @@
 </head>
 <body>
 <div class="container">
+    {% if form.errors %}
+    <p> There are some errors in the form. Please correct them and try again.</p>
+    {% endif %}
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header pb-1">
 				<h3>Sign Up</h3>
 			</div>
 			<div class="card-body">
-				<form method="post">
+				<form method="post" action = "{% url 'signup' %}" >
                     {% csrf_token %}
                     <div class="input-group form-group">
 						<div class="input-group-prepend">
@@ -119,11 +122,11 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-phone"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="Phone">
+						<input type="phone" class="form-control" placeholder="Phone">
 						
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn float-center login_btn" formaction="/">Register</button>
+						<button type="submit" class="btn float-center login_btn">Register</button>
 					</div>
 				</form>
 			</div>
