--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -58,7 +58,7 @@ Services
           ">CHIPI CHIPI</div>
         </div>
         <div class="carousel-item">
-            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://www.pixel4k.com/wp-content/uploads/2019/01/captain-marvel-4k-poster_1547507717-768x410.jpg.webp" class="d-block w-100" alt="...">          
+            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/75EFA1607F7ED1D9B8F2DD2FA9A344FE9470886FEF3BD7D78A5BB72D060D9B58/scale?width=1200&aspectRatio=1.78&format=webp" class="d-block w-100" alt="...">          
             <div class="bottom-left" style = "position: absolute;
             top: 80%;
             left: 50%;
