--- a/vrs/templates/signup.html
+++ b/vrs/templates/signup.html
@@ -102,27 +102,27 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="Name">
+						<input type="text" class="form-control" name="name" placeholder="Name">
 						
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-envelope"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="E-mail">
+						<input type="text" class="form-control" name="email" placeholder="E-mail">
 						
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" placeholder="Password">
+						<input type="password" class="form-control" name="password" placeholder="Password">
 					</div>
                     <div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-phone"></i></span>
 						</div>
-						<input type="phone" class="form-control" placeholder="Phone">
+						<input type="phone" class="form-control" name="phone" placeholder="Phone">
 						
 					</div>
 					<div class="form-group">
