--- a/vrs/templates/base.html
+++ b/vrs/templates/base.html
@@ -10,7 +10,7 @@
 
     <title> {% block title %}{% endblock title %} | Movie ki dukaan</title>
   </head>
-  <body style = "background-color: black">
+  <body style = "background-color: gainsboro;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">VRS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
