--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -1,21 +1,23 @@
 {% extends "base.html" %}
 {% block title %}
-Services 
+Services
 {% endblock title %}
 {% block body %}
+
 <div class="container">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2569">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img style = "padding: 30px 0px 0px 0px; max-height = 700px; height: 700px;" src="https://i.ytimg.com/vi/mWxjRXR7nWI/maxresdefault.jpg" class="d-block w-100" alt="...">
-            <div class="bottom-left" style = "position: absolute;
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2569">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img style="padding: 30px 0px 0px 0px; max-height: 700px; height: 700px;"
+          src="https://i.ytimg.com/vi/mWxjRXR7nWI/maxresdefault.jpg" class="d-block w-100" alt="...">
+        <div class="bottom-left" style="position: absolute;
             top: 80%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -23,10 +25,12 @@ Services
             color: white;
             Font-family: 'Comic Sans MS';
           ">WE THE MEN</div>
-        </div>
-          <div class="carousel-item">
-            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://w0.peakpx.com/wallpaper/544/133/HD-wallpaper-tomb-raider-games-movie-action-video-game-video-games-guns-gun-lara-croft-pistols-hot-beauty-female-erica-ocampo-model-black-sexy-adventure-weapons-girl-plain-background-alison.jpg" class="d-block w-100" alt="...">
-            <div class="bottom-left" style = "position: absolute;
+      </div>
+      <div class="carousel-item">
+        <img style="padding: 30px 0px 0px 0px; height: 700px;"
+          src="https://w0.peakpx.com/wallpaper/544/133/HD-wallpaper-tomb-raider-games-movie-action-video-game-video-games-guns-gun-lara-croft-pistols-hot-beauty-female-erica-ocampo-model-black-sexy-adventure-weapons-girl-plain-background-alison.jpg"
+          class="d-block w-100" alt="...">
+        <div class="bottom-left" style="position: absolute;
             top: 80%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -34,10 +38,12 @@ Services
             color: white;
             Font-family: 'Comic Sans MS';
           ">LARA CROFT</div>
-        </div>
-          <div class="carousel-item">
-            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://media1.popsugar-assets.com/files/thumbor/MeLoZj0qZccjAfZ5ZCo4mPq-obs=/fit-in/3900x2600/top/filters:format_auto():extract_cover():upscale()/2022/03/03/722/n/46902964/3cecfccbef36e2ba_MCDROON_EC036.jpg" class="d-block w-100" alt="...">          
-            <div class="bottom-left" style = "position: absolute;
+      </div>
+      <div class="carousel-item">
+        <img style="padding: 30px 0px 0px 0px; height: 700px;"
+          src="https://media1.popsugar-assets.com/files/thumbor/MeLoZj0qZccjAfZ5ZCo4mPq-obs=/fit-in/3900x2600/top/filters:format_auto():extract_cover():upscale()/2022/03/03/722/n/46902964/3cecfccbef36e2ba_MCDROON_EC036.jpg"
+          class="d-block w-100" alt="...">
+        <div class="bottom-left" style="position: absolute;
             top: 80%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -45,10 +51,12 @@ Services
             color: white;
             Font-family: 'Comic Sans MS';
           ">WOMEN IN US</div>
-        </div>
-        <div class="carousel-item">
-            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://www.teahub.io/photos/full/82-823033_cat-cute-and-animal-image-hd-wallpapers-for.jpg" class="d-block w-100" alt="...">          
-            <div class="bottom-left" style = "position: absolute;
+      </div>
+      <div class="carousel-item">
+        <img style="padding: 30px 0px 0px 0px; height: 700px;"
+          src="https://www.teahub.io/photos/full/82-823033_cat-cute-and-animal-image-hd-wallpapers-for.jpg"
+          class="d-block w-100" alt="...">
+        <div class="bottom-left" style="position: absolute;
             top: 80%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -56,10 +64,12 @@ Services
             color: white;
             Font-family: 'Comic Sans MS';
           ">CHIPI CHIPI</div>
-        </div>
-        <div class="carousel-item">
-            <img style = "padding: 30px 0px 0px 0px; height: 700px;" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/75EFA1607F7ED1D9B8F2DD2FA9A344FE9470886FEF3BD7D78A5BB72D060D9B58/scale?width=1200&aspectRatio=1.78&format=webp" class="d-block w-100" alt="...">          
-            <div class="bottom-left" style = "position: absolute;
+      </div>
+      <div class="carousel-item">
+        <img style="padding: 30px 0px 0px 0px; height: 700px;"
+          src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/75EFA1607F7ED1D9B8F2DD2FA9A344FE9470886FEF3BD7D78A5BB72D060D9B58/scale?width=1200&aspectRatio=1.78&format=webp"
+          class="d-block w-100" alt="...">
+        <div class="bottom-left" style="position: absolute;
             top: 80%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -67,17 +77,184 @@ Services
             color: white;
             Font-family: 'Comic Sans MS';
           "></div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 </div>
-    
-{% endblock body %}
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<style>
+  .card-img-top {
+    height: 500px;
+    border-collapse: separate;
+    border-radius: 10px;
+  }
 
+  .card-group,
+  .my {
+    scale: 0.75;
+  }
+
+  #movieimage {
+    height: 525px;
+    border-collapse: separate;
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
+  .card-body
+  {
+    /* border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px; */
+    border-radius: 10px;
+    background-color: white;
+    color: black;
+  }
+
+  .card
+  {
+    /* height: 500px; */
+    background-color: rgba(0, 0, 0, 0);
+    padding: 10px;
+  }
+</style>
+
+<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
+  <!-- <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+      aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div> -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="card-group">
+        <div class="card">
+          <img
+            src="https://i.ytimg.com/vi_webp/vO2N0LGvhWc/movieposter_en.webp"
+            class="card-img-top" id = "movieimage" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://m.economictimes.com/thumb/msid-106642618,width-1200,height-1200,resizemode-4,imgsize-99818/the-marvels-online-release-date-revealed-when-will-it-start-streaming.jpg"
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">d-in to additional
+              content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Tnal
+              content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="carousel-item">
+      <div class="card-group">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="carousel-item">
+
+
+      <div class="card-group">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+{% endblock body %}
