card crousel done

--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -95,12 +95,7 @@ Services
   integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
   integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<style>
-  .card-img-top {
-    height: 500px;
-    border-collapse: separate;
-    border-radius: 10px;
-  }
+<style>   
 
   .card-group,
   .my {
@@ -108,7 +103,7 @@ Services
   }
 
   #movieimage {
-    height: 525px;
+    height: 92%;
     border-collapse: separate;
     border-radius: 10px;
     margin-bottom: 10px;
@@ -125,6 +120,7 @@ Services
   .card
   {
     /* height: 500px; */
+    {% comment %} width: 200px; {% endcomment %}
     background-color: rgba(0, 0, 0, 0);
     padding: 10px;
   }
@@ -137,115 +133,45 @@ Services
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div> -->
+
+
+
   <div class="carousel-inner">
+
     <div class="carousel-item active">
       <div class="card-group">
+        {% for j in range1 %}
         <div class="card">
-          <img
-            src="https://i.ytimg.com/vi_webp/vO2N0LGvhWc/movieposter_en.webp"
-            class="card-img-top" id = "movieimage" alt="...">
+          <img src="static/{{j.movie_img}}" class="card-img-top" id = "movieimage" alt="{{ j.movie_img }}">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">{{j.movie_title}}</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
               content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
-        <div class="card">
-          <img
-            src="https://m.economictimes.com/thumb/msid-106642618,width-1200,height-1200,resizemode-4,imgsize-99818/the-marvels-online-release-date-revealed-when-will-it-start-streaming.jpg"
-            class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">d-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Tnal
-              content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
+        {% endfor %}
+      </div>
       </div>
 
-    </div>
-    <div class="carousel-item">
+    {% for i in range2 %} 
+    <div class="carousel-item ">
       <div class="card-group">
+        {% for j in i %}
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="static/{{j.movie_img}}" class="card-img-top" id = "movieimage" alt="{{ j.movie_img }}">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">{{j.movie_title}}</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
               content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
+        {% endfor %}
       </div>
-
-    </div>
-    <div class="carousel-item">
-
-
-      <div class="card-group">
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
       </div>
-    </div>
-  </div>
+      {% endfor %}
+
   <div>
     <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
