--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Services
+Home
 {% endblock title %}
 {% block body %}
 
@@ -89,88 +89,84 @@ Services
     </div>
   </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
   integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<style>   
 
+<style>
   .card-group,
   .my {
-    scale: 0.75;
+    padding: 60px;
   }
 
   #movieimage {
-    height: 92%;
     border-collapse: separate;
     border-radius: 10px;
     margin-bottom: 10px;
   }
-  .card-body
-  {
-    /* border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px; */
+
+  .card-body {
+    height: auto;
     border-radius: 10px;
     background-color: white;
     color: black;
+    padding: 0.8rem;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
   }
 
-  .card
-  {
-    /* height: 500px; */
-    {% comment %} width: 200px; {% endcomment %}
+  .card {
     background-color: rgba(0, 0, 0, 0);
-    padding: 10px;
+    padding: 5px;
+  }
+
+  .carousel-control-prev,
+  .carousel-control-next {
+    width: 4%;
+  }
+
+  /* adding bold to movie-title */
+  .card-title {
+    font-weight: bold;
+    margin-bottom: 0.25rem;
+  }
+  #god {
+    font-size: 1rem;
   }
 </style>
 
 <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
-  <!-- <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-      aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div> -->
-
-
 
   <div class="carousel-inner">
-
     <div class="carousel-item active">
       <div class="card-group">
         {% for j in range1 %}
         <div class="card">
-          <img src="static/{{j.movie_img}}" class="card-img-top" id = "movieimage" alt="{{ j.movie_img }}">
+          <img src="media/{{j.movie_img}}" class="card-img-top" id = "movieimage" alt="{{ j.movie_img }}"> 
           <div class="card-body">
-            <h5 class="card-title">{{j.movie_title}}</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title"> {{j.movie_title}} </h5>
+            <p class="card-text"><small id = "god" class = "text-muted"> {{j.movie_runtime}}</small></p>
           </div>
         </div>
         {% endfor %}
       </div>
-      </div>
+    </div>
 
-    {% for i in range2 %} 
-    <div class="carousel-item ">
+    {% for i in range2 %}
+    <div class="carousel-item">
       <div class="card-group">
         {% for j in i %}
         <div class="card">
-          <img src="static/{{j.movie_img}}" class="card-img-top" id = "movieimage" alt="{{ j.movie_img }}">
+          <img src="/media/{{j.movie_img}}" class="card-img-top" id = "movieimage" alt="{{ j.movie_img }}"> 
           <div class="card-body">
             <h5 class="card-title">{{j.movie_title}}</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p class="card-text"><small id = "god" class = "text-muted"> {{j.movie_runtime}}</small></p>
           </div>
         </div>
         {% endfor %}
       </div>
-      </div>
-      {% endfor %}
+    </div>
+    {% endfor %}
 
   <div>
     <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
