--- a/vrs/templates/base.html
+++ b/vrs/templates/base.html
@@ -26,14 +26,16 @@
               <a class="nav-link" href="/about">About Us</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/services" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Services
+              <a class="nav-link dropdown-toggle" href="/genre" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Genre
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/services">Action</a>
-                <a class="dropdown-item" href="#">Comedy</a>
-                <a class="dropdown-item" href="#">Romance</a>
-                <a class="dropdown-item" href="#">Drama</a>
+                <a class="dropdown-item" href="/action">Action</a>
+                <a class="dropdown-item" href="/comedy">Comedy</a>
+                <a class="dropdown-item" href="/romance">Romance</a>
+                <a class="dropdown-item" href="/drama">Drama</a>
+                <a class="dropdown-item" href="/horror">Horror</a>
+                <a class="dropdown-item" href="/thriller">Thriller</a>
               </div>
             </li>
             <li class="nav-item">
