--- a/vrs/templates/comedy.html
+++ b/vrs/templates/comedy.html
@@ -3,13 +3,18 @@
 Comedy Movies
 {% endblock title %}
 {% block body %}
-    <style>
+<style>
 
-        h5.card-title {
-            margin-bottom: 0;
-        }
+    .card-title 
+    {
+        margin-bottom: 0;
+    }
+    
+    {
+        width: 25%;
+    }
 
-    </style>
+</style>
 <h1>Comedy Movies</h1>
 
     {% for i in moviesets %}
