added movie page

--- a/vrs/templates/display.html
+++ b/vrs/templates/display.html
@@ -48,6 +48,7 @@
     }
     #movieimage 
     {
+        aspect-ratio: 2/3;
         border-collapse: separate;
         border-radius: 10px;
         margin-bottom: 10px;
