--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -100,6 +100,7 @@ Home
   }
 
   #movieimage {
+    aspect-ratio: 2/3;
     border-collapse: separate;
     border-radius: 10px;
     margin-bottom: 10px;
