--- a/vrs/templates/movie.html
+++ b/vrs/templates/movie.html
@@ -1,19 +1,91 @@
 {% extends "base.html" %}
 {% block title %}
-{{title}}
+{{movie.movie_title}}
 {% endblock title %}
 {% block body %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>{{title}}</h1>
-            <p class="lead">This
-                is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </div>
-    </div>
-</div>
 
-{% endblock body %}
+<style>
+  #bg {
+    aspect-ratio: 16/9;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 0.4)),
+    url("/media/{{movie.movie_img}}");
+
+    background-size: cover;
+  }
+
+  .title {
+    font-size: 4rem;
+    font-weight: bold;
+    color: white;
+  }
+  .content {
+    padding-top: 10%;
+    padding-left: 6%;
+  }
+
+  .genre {
+    font-size: 1.5rem;
+    color: whitesmoke;
+  }
+
+  .duration {
+    font-size: 1.5rem;
+    color: whitesmoke;
+  }
+
+  .year {
+    font-size: 1.5rem;
+    color: whitesmoke;
+  }
+
+  .desc {
+    font-size: 1.25rem;
+    color: whitesmoke;
+  }
+
+  .col-7   > * {
+    margin: 0.2rem;
+    height: 100%;
+    width: 23%;
+    /* font style */
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    /* background-color: #343a40;  */
+  }
+
+</style>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+
+<div id="bg">
+  <div class="content">
+    <h1 class="title">{{movie.movie_title}}</h1>
+    <div class="row">
+      <div class="col-1">
+        <p class="genre">{{movie.movie_genre}}</p>
+      </div>
+      <div class="col-1 ml-2 mr-1">
+        <p class="duration"> {{hours}}hr {{minutes}}m</p>
+      </div>
+      <div class="col-1">
+        <p class = "year">{{movie.movie_release_year.year}}</p>   
+      </div>
+    </div>
+    <!-- adding movie desciption in good format -->
+    <div class="row">
+      <div class="col-6">
+        <p class="desc">{{movie.movie_desc}}</p>
+      </div>
+    </div>
+    <!-- to make buttons to rent and buy movies -->
+    <div class="row">
+      <div class="col-7 ">
+        <button type="button" class="btn btn-dark btn-lg">Rent ₹{{movie.movie_rent_price}} </button>
+        <button type="button" class="btn btn-dark btn-lg">Buy ₹{{movie.movie_buy_price}}</button>
+        <button style = "width: 10%;" type="button" class="btn btn-dark btn-lg"><i class="fas fa-cart-plus"  style="scale: 1.25;"></i></button>
+      </div>
+  </div>
+</div>
+  {% endblock body %}
