--- a/vrs/templates/base.html
+++ b/vrs/templates/base.html
@@ -10,6 +10,9 @@
 
     <title> {% block title %}{% endblock title %} | Movie ki dukaan</title>
   </head>
+  <!--Fontawesome CDN-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
   <body style = "background-color: black;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">VRS</a>
@@ -52,10 +55,51 @@
         </div>
       </nav>
     {% block body %}{% endblock body  %}
+    <style>
+      #cartbutton{
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        margin: 20px;
+        margin-right: 30px;
+        border-radius: 50%;
+        height: 100px;
+        width: 100px;
+      }
+    </style>
+    <button type="button" class="btn btn-success" id="cartbutton"><i class="fas fa-shopping-cart", style="scale:2.5;"></i> </button>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  
+    <script>
+      if(localStorage.getItem('cart') == null){
+        var cart = {};
+      }
+      else{
+        cart = JSON.parse(localStorage.getItem('cart'));
+      }
+      $('.cart').click(function(){
+
+        var idstr = this.id.toString();
+        if(cart[idstr] != undefined){
+          cart[idstr] = 1;
+          //pop message that item is alreday added to cart
+          alert('Item already added to cart')
+        }
+        else{
+          cart[idstr] = 1;
+          //pop message that item is added to cart
+          alert('Item added to cart')
+        }
+        console.log(cart);
+        localStorage.setItem('cart', JSON.stringify(cart));
+      });
+
+
+
+    </script>
   </body>
 </html>
