--- a/vrs/templates/base.html
+++ b/vrs/templates/base.html
@@ -74,18 +74,17 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   
-    <script>
-      if(localStorage.getItem('cart') == null){
+    {% comment %} <script>
+      if(sessionStorage.getItem('cart') == null){
         var cart = {};
       }
       else{
-        cart = JSON.parse(localStorage.getItem('cart'));
+        cart = JSON.parse(sessionStorage.getItem('cart'));
       }
       $('.cart').click(function(){
 
         var idstr = this.id.toString();
         if(cart[idstr] != undefined){
-          cart[idstr] = 1;
           //pop message that item is alreday added to cart
           alert('Item already added to cart')
         }
@@ -95,11 +94,11 @@
           alert('Item added to cart')
         }
         console.log(cart);
-        localStorage.setItem('cart', JSON.stringify(cart));
+        sessionStorage.setItem('cart', JSON.stringify(cart));
       });
 
 
 
-    </script>
+    </script> {% endcomment %}
   </body>
 </html>
