--- a/vrs/templates/base.html
+++ b/vrs/templates/base.html
@@ -67,7 +67,7 @@
         width: 100px;
       }
     </style>
-    <button type="button" class="btn btn-success" id="cartbutton"><i class="fas fa-shopping-cart", style="scale:2.5;"></i> </button>
+    <a href = "/cart"><button type="button" class="btn btn-success" id="cartbutton"><i class="fas fa-shopping-cart", style="scale:2.5;"></i> </button></a>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
