--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -144,7 +144,7 @@ Home
         {% for j in range1 %}
         <div class="card">
           <a href="/movie/{{j.movie_id}}">
-          <img src="media/{{j.movie_img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='static/noposter.png';"> 
+          <img src="/media/{{j.movie_img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
         </a>
           <div class="card-body">
             <h5 class="card-title"> {{j.movie_title}} </h5>
@@ -161,7 +161,7 @@ Home
         {% for j in i %}
         <div class="card">
           <a href="/movie/{{j.movie_id}}">
-          <img src="media/{{j.movie_img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='static/noposter.png';"> 
+          <img src="/media/{{j.movie_img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
         </a>
           <div class="card-body">
             <h5 class="card-title">{{j.movie_title}}</h5>
