--- a/vrs/templates/signup.html
+++ b/vrs/templates/signup.html
@@ -106,7 +106,7 @@
 				<h3>Sign Up</h3>
 			</div>
 			<div class="card-body">
-				<form method="post" action = "{% url 'signup' %}" >
+				<form method="post" action = "/signup" >
                     {% csrf_token %}
                     <div class="input-group form-group">
 						<div class="input-group-prepend">
